test/classicalForget5.slq
def main(){
	(x,)~y:=(); /// error
}
